[metadata]
name = pyutilator
version = 0.0.2
author = Antony Prince J
author_email = antoprince001@gmail.com
description = Python Utility Decorators
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/antoprince001/pyutilator
# project_urls =
#     Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src